[metadata]
name = ycomp
version = 0.1.0
description = Tools for working with Y-chromosome data from YFull and FTDNA
long_description = file: README.rst
url = https://github.com/alexreg/journal-abbrev
author = Alexander W. Regueiro
author_email = alexreg@gmail.ccom
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Utilities
	Typing :: Typed
keywords =
	bioinformatics
	genetics

[options]
zip_safe = false
include_package_data = true
package_dir =
	=src/
packages = find:
python_requires = ~= 3.9
install_requires =
	beautifulsoup4 ~= 4.11
	mechanicalsoup ~= 1.1
	more_itertools ~= 8.10
	numpy ~= 1.21
	pandas ~= 1.4
	platformdirs ~= 2.5.2
	pyppeteer ~= 1.0.2
	typer ~= 0.4

[options.entry_points]
console_scripts =
	ycomp = ycomp:main

[options.packages.find]
where = src/
